** add middlewares ** add docker-compose.yaml

--- a/.kubernetes/deployment.yaml
+++ b/.kubernetes/deployment.yaml
@@ -28,7 +28,7 @@ spec:
           protocol: TCP
         readinessProbe:
           httpGet:
-            path: /q/health
+            path: /q/readiness
             port: 8080
           initialDelaySeconds: 5
           periodSeconds: 10
